deploy/gke/backstage/bs-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ps-backstage-ip
    networking.gke.io/managed-certificates: backstage-cert
  labels:
    app: backstage
spec:
  defaultBackend:
    service:
      name: backstage
      port:
        number: 80
